Changed Footer + Bug fix on mobile

--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -4,11 +4,8 @@
     0 0 0 1.2em rgba(255, 255, 255, 0.05), 0 0 0 1.8em rgba(255, 255, 255, 0.05);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 100px; 
-  border-radius: 50% 50% 0% 0%;
-  gap: 100px;
-
 }
 
 .flag {
@@ -20,12 +17,12 @@
 
 .first{
   position: relative;
-  left: 25px;
+  left: 3px;
 }
 
 .second{
   position: relative;
-  right: 25px;
+  right: 3px;
 }
 
 .flag__flagpole {
@@ -44,7 +41,7 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 600%;
+  width: 400%;
   height: 3.75px; 
   border-radius: 1.5px; 
   background-color: #444;
@@ -73,4 +70,14 @@
 
 .link_footer{
   margin-bottom: 15px;
+}
+
+.copyright{
+  position: absolute;
+  margin: 0;
+  &_icon{
+    font-size: 25px;
+    position: relative;
+    top: 8px;
+  }
 }
