--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -7,7 +7,7 @@
     padding-top: 100px;
 }
 .contact-footer{
-    padding-top: 55px;
+    margin-top: 60px;
 }
 .on-top{
     width: 100%;
