--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -147,9 +147,10 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100%; /* Adjusted to 97.5% of the viewport width */
   height: 100%;
   pointer-events: none;
+  margin: auto;
 }
 
 .star {
@@ -210,13 +211,13 @@ body {
     transform: translateY(0) translateX(0);
   }
   25% {
-    transform: translateY(3.5vh) translateX(3.5vh);
+    transform: translateY(3vh) translateX(3vh);
   }
   50% {
-    transform: translateY(0) translateX(5.5vh);
+    transform: translateY(0) translateX(4vh);
   }
   75% {
-    transform: translateY(-3.5vh) translateX(3.5vh);
+    transform: translateY(-3vh) translateX(3vh);
   }
 }
 @keyframes shootingStarsAnimation {
@@ -444,10 +445,8 @@ p, h1, h2, h3 {
   box-shadow: 0 0 0 0.6em rgba(255, 255, 255, 0.05), 0 0 0 1.2em rgba(255, 255, 255, 0.05), 0 0 0 1.8em rgba(255, 255, 255, 0.05);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 100px;
-  border-radius: 50% 50% 0% 0%;
-  gap: 100px;
 }
 
 .flag {
@@ -459,12 +458,12 @@ p, h1, h2, h3 {
 
 .first {
   position: relative;
-  left: 25px;
+  left: 3px;
 }
 
 .second {
   position: relative;
-  right: 25px;
+  right: 3px;
 }
 
 .flag__flagpole {
@@ -483,7 +482,7 @@ p, h1, h2, h3 {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 600%;
+  width: 400%;
   height: 3.75px;
   border-radius: 1.5px;
   background-color: #444;
@@ -513,6 +512,16 @@ p, h1, h2, h3 {
   margin-bottom: 15px;
 }
 
+.copyright {
+  position: absolute;
+  margin: 0;
+}
+.copyright_icon {
+  font-size: 25px;
+  position: relative;
+  top: 8px;
+}
+
 /* Components Styling */
 /* Page Styling May be deleted later  */
 .flexbox {
@@ -533,7 +542,7 @@ p, h1, h2, h3 {
 }
 
 .contact-footer {
-  padding-top: 55px;
+  margin-top: 60px;
 }
 
 .on-top {
